fix gap menu

--- a/src/layouts/HeaderV4/Main/style.module.scss
+++ b/src/layouts/HeaderV4/Main/style.module.scss
@@ -89,7 +89,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 20px;
+  gap: 34px;
 
   :global {
     .menu-item {
